# caffe

./: CMakeLists.txt  README.md
detectorService/: CMakeLists.txt  CaffeDetectI.cpp  CaffeDetectI.h  cnpy.cpp  cnpy.h
trainerService/: CMakeLists.txt  CaffeTrainerI.cpp  CaffeTrainerI.h  temp
